# bevy_chess

./: .gitpod.Dockerfile  .gitpod.dockerfile  .gitpod.yml  .pre-commit-config.yaml  Cargo.toml  README.md  rust-toolchain.toml
assets/models/chess_kit/: pieces.gltf  rook.gltf
assets/models/test/: cube.glb  cube.gltf  cube2.gltf  sphere.gltf
src/: main.rs
